HelloUltraviolet/Fixtures/RejectedSource/Expressions/FloatSuffixMismatch/Source/Main.uv
//! Rejected expression specimen for an explicit float suffix mismatch.

public procedure floatSuffixMismatchReference() -> f32 {
    return 1.0f64
}
